# MemLite

./: .env.example  .gitignore  LICENSE  Makefile  README.en.md  README.md  pyproject.toml  review_result_to_fix.md
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  config-reference.md  deployment-guide.md  faq.md  full-todo-plan.md  implementation-roadmap.md  mcp-guide.md  migration-guide.md  openclaw-plugin-guide.md  optimization-backlog.md  quickstart.md  schema-design.md  schema-overview.md  sdk-usage-guide.md  technical-solution.md  troubleshooting.md
examples/: python_sdk_quickstart.py
integrations/openclaw/: README.md  openclaw.plugin.json  package-lock.json  package.json
plan/: 20260308-openclaw-systemd-todo.md  tasks-2026-03-13-execution.md  todo-2026-03-12.md  todo-2026-03-13.md  todo-2026-03-22-model-warmup-reranker.md
reports/: 2026-03-07-callchain-audit.md  benchmark-search.json  load-test.json
scripts/: e2e_check.sh  inspect_kuzu.sh  memlite_service.sh  memolite_service.sh  setup_openclaw_memlite.sh  setup_openclaw_memolite.sh  start_local.sh  sync_openclaw_dist.sh  verify_memlite.sh  verify_openclaw_memolite.sh
src/memlite/: __init__.py  cli.py  command.py
src/memolite/: cli.py  command.py
tasks/: 20260308-openclaw-systemd-todo.md
tests/integration/: test_api_routes.py  test_cli_integration.py  test_episode_store_integration.py  test_episodic_delete_integration.py  test_episodic_search_integration.py  test_health.py  test_mcp_integration.py  test_memory_orchestrator_integration.py  test_metrics.py  test_migration_tools.py  test_observability.py  test_project_store_integration.py  test_python_sdk.py  test_regression_guards.py  test_semantic_config_store_integration.py  test_semantic_feature_store_integration.py  test_semantic_service_integration.py  test_semantic_session_manager_integration.py  test_session_store_integration.py  test_short_term_memory_integration.py  test_sqlite_bootstrap.py  test_stability.py
tests/unit/: test_background_tasks.py  test_benchmark.py  test_cli.py  test_cli_migration.py  (+32 more)
(+121 files in other folders)
