[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memolite"
version = "0.1.2"
description = "Lightweight long-term memory infrastructure for AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastmcp>=3.1.0",
    "fastapi>=0.116.1",
    "kuzu>=0.11.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "greenlet>=3.2.4",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]

[project.scripts]
memolite = "memlite.command:main"
memolite-server = "memlite.app.main:main"
memolite-mcp-stdio = "memlite.mcp.__main__:run_stdio_main"
memolite-mcp-http = "memlite.mcp.__main__:run_http_main"
memolite-configure = "memlite.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
memlite = ["scripts/*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
